# qfbuilds

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  configure.sh  qfbuilds.mk
cmake/: arm-cm_toolchain.cmake  posix_toolchain.cmake
lib/: CMakeLists.txt  qpc.cmake
